# tiler

./: Cargo.toml  readme.md
src/: ext.rs  frame_buffer.rs  gui.rs  icon24.data  key.rs  main.rs  make.rs  rect.rs  tile.rs
src/shader/: pulled.wgsl  select.wgsl  split.wgsl  tiles.wgsl
