[package]
name = "tiler"
version = "1.0.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.4"
bitfield = "0.15.0"
egui = "0.26.2"
egui-file-dialog = "0.4.0"
egui-wgpu = "0.26.2"
egui-winit = "0.26.2"
env_logger = "0.11.1"
glam = "0.27.0"
image = "0.24.9"
pollster = "0.3.0"
reinterpret = { git = "https://github.com/Ababwa/reinterpret.git" }
softbuffer = "0.4.1"
wgpu = "0.19.1"
winit = "0.29.10"

[build-dependencies]
winresource = "0.1.17"
